--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="../static/style.css" />
     </head>
 
     <form action="action_page.php"></form>
